Fix: title-card styles, div spacing, workshop images

--- a/client/components/meetup/meetup.styl
+++ b/client/components/meetup/meetup.styl
@@ -1,5 +1,5 @@
 .meetup
-  border-top 6px solid $primary
+  border-top 10px solid $header-light
   min-height 100vh
   text-align center
   header
