--- a/client/components/title-card.styl
+++ b/client/components/title-card.styl
@@ -1,8 +1,8 @@
 .title-card
   $grid('row', 'center')
-  background-size cover
-  border 6px solid $primary
-  color $secondary
+  background-color #0a4979
+  border 10px solid #80deea
+  color #80deea
   text-align center
   transform translateY(-50%)
   h1
@@ -17,6 +17,7 @@
   +$above('sm')
     $center(40vw)
     height 120px
-    min-width 400px
+    min-width 300px
     h1
-      font-size 3.5rem
+      font-size 2.5rem
+      letter-spacing 4px
